prd/argocd-bootstrap/apps/ktz/backstage/overlays/dev/k8s/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backstage-ingress
  annotations:
    cert-manager.io/cluster-issuer: kartoza-vault-issuer
    cert-manager.io/common-name: backstage.dev.do.kartoza.com
  labels:
    external-dns-exclude: "true"
spec:
  ingressClassName: internal-nginx
  rules:
    - host: backstage.dev.do.kartoza.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: backstage
                port:
                  number: 80
  tls:
   - hosts:
       - backstage.dev.do.kartoza.com
     secretName: backstage.dev.do.kartoza.com-tls
